Refactor bootloader process manager to allow more flexibility